--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,62 @@
+body {
+    height: 100%;
+    margin: 0;
+    color: #777777;
+    background: url("../images/concrete_seamless.png");
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+}
+
+h1{
+    font-family: 'Georgia', Times, Times New Roman, serif;
+    color: white;
+}
+h2{
+
+}
+h3{
+    font-family: 'Georgia', Times, Times New Roman, serif;
+    color:  #4aaaa5;
+    font-size: 24;
+}
+img{
+    padding: 1%;
+    height: 400px;
+    width: 400px;
+}
+
+footer {
+    padding: 30px 0;
+    clear: both;
+    font-size: 12px;
+    color: #ffffff;
+    text-align: center;
+    background: #666666;
+    border-top: 8px solid #4aaaa5;
+    height: 50px;
+}
+
 .headername{
     background: #4aaaa5;
     color: #ffffff;
+    font-size: 24px;
 }
 .navbar-brand{
     color: #ffffff;
 }
+.aboutbody{
+    background: #ffffff;
+    border: 1px solid #dddddd;
+    padding-top: 130px;
+}
+.container {
+    width: 100%;
+    max-width: 960px;
+    margin: 0 auto;
+    clear: both;
+  }
+  .navbar{
+      background-color: #ffffff;
+      width: 960px;
+      margin-left: 275px;
+      border-bottom: 2px solid #cccccc;
+  }
