--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,11 @@
 body {
+    width: 960px;
     height: 100%;
     margin: 0;
     color: #777777;
     background: url("../images/concrete_seamless.png");
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    margin-left: 275px;
 }
 
 h1{
@@ -46,7 +48,8 @@ footer {
 .aboutbody{
     background: #ffffff;
     border: 1px solid #dddddd;
-    padding-top: 130px;
+    padding: 1%;
+    padding-top: 100px;
 }
 .container {
     width: 100%;
@@ -59,4 +62,7 @@ footer {
       width: 960px;
       margin-left: 275px;
       border-bottom: 2px solid #cccccc;
+  }
+  .form-control-large{
+      height: 500px;
   }
