--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
     width: 960px;
     height: 100%;
     margin: 0;
-    color: #777777;
+    color: black;
     background: url("../images/concrete_seamless.png");
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     margin-left: 275px;
@@ -12,9 +12,7 @@ h1{
     font-family: 'Georgia', Times, Times New Roman, serif;
     color: white;
 }
-h2{
 
-}
 h3{
     font-family: 'Georgia', Times, Times New Roman, serif;
     color:  #4aaaa5;
@@ -65,4 +63,9 @@ footer {
   }
   .form-control-large{
       height: 500px;
+  }
+
+  .contact-entry{
+      font-size: 18pt;
+      padding-left: 5%;
   }
